# pyapp_bug

./: .gitignore  Makefile  pyproject.toml
pyapp_bug/: entry.py
